--- a/core/src/main/res/values/arrays.xml
+++ b/core/src/main/res/values/arrays.xml
@@ -167,6 +167,16 @@
         <item>3.80</item>
         <item>3.90</item>
         <item>4.00</item>
+        <item>4.10</item>
+        <item>4.20</item>
+        <item>4.30</item>
+        <item>4.40</item>
+        <item>4.50</item>
+        <item>4.60</item>
+        <item>4.70</item>
+        <item>4.80</item>
+        <item>4.90</item>
+        <item>5.00</item>
     </string-array>
 
     <string-array name="theme_options">
